feat!: 영상 순서 변경 [#34]
* test: SequenceUpdater 테스트 작성

* feat: PlaySequencesForUpdate -> 순서 변경 요청과 관련된 불변식 추가

* test: test 수정 및 SequenceUpdaterTest의 update메서드 로직 구조 잡기

* feat: SequenceUpdater 완성 + 테스트 성공

* feat: Json 요청 생성

* feat: 영상의 재생 순서 변경 API 완성 & fix!:영상의 재생 시간 변경 API에 대한 jsonRequest에 playlistId추가

* fix: PlaySequencesForUpdate -> 리스트 내의 ID 중복 검사 추가

* feat: domain 내의 Exception들 따로 하위 패키지로 관리

* feat: Plays, Playlists -> 리스트 내 중복 ID 검사 추가

* refactor: Mapper들 Mapping만 하도록 수정

* refactor: 필요없는 Class 정리

* feat: Plays, PlaySequencesForUpdate의 list를 unmodifiableList로 변경